--- a/styles/components/Search.module.scss
+++ b/styles/components/Search.module.scss
@@ -1,10 +1,12 @@
-.search-wrapper {
+@import '../index.scss';
+
+.searchWrapper {
   position: relative;
 
-  .input-search {
+  .inputSearch {
     width: 300px;
     height: 50px;
-    padding: 0.8rem 1.6rem;
+    padding: 0 1.6rem;
     font-size: 1.4rem;
     font-weight: 700;
     background-color: rgba($color-white, 0.7);
@@ -22,20 +24,21 @@
     }
   }
 
-  .search-btn {
+  .searchBtn {
     position: absolute;
+    top: 2px;
     right: 10px;
     width: 50px;
     height: 50px;
     background-color: transparent;
 
-    .ic-search {
+    .icSearch {
       font-size: 2.6rem;
       color: $color-blue;
     }
   }
 
-  .error-text {
+  .errorText {
     @include text-style(14);
     display: none;
     padding-left: 1.6rem;
@@ -50,7 +53,7 @@
     }
   }
 
-  .search-result {
+  .searchResult {
     position: absolute;
     top: 50px;
     left: 0;
@@ -60,11 +63,11 @@
     background-color: rgba($color-white, 0.7);
     border-radius: 5px;
 
-    &.is-active {
+    &.isActive {
       display: block;
     }
 
-    .result-list {
+    .resultList {
       @include text-style(16, $color-gray-400);
       padding-left: 0.8rem;
       font-weight: 700;
@@ -75,7 +78,7 @@
         transition: all 300ms ease-in-out;
 
         &:hover,
-        &.is-active {
+        &.isActive {
           color: $color-gray-700;
           background-color: rgba($color-blue, 0.3);
         }
