--- a/styles/components/Clouds.module.scss
+++ b/styles/components/Clouds.module.scss
@@ -1,4 +1,6 @@
-.clouds-wrapper {
+@import '../index.scss';
+
+.cloudsWrapper {
   width: 100%;
   height: 10vh;
 
@@ -29,47 +31,7 @@
   right: 0;
   width: 200px;
   opacity: 1;
-}
 
-.cloud.front {
-  z-index: 9;
-}
-
-.cloud.distant {
-  z-index: 1;
-}
-
-.cloud.background {
-  z-index: 1;
-}
-
-/*Cloud Sizing*/
-.cloud.smaller {
-  margin-right: 400px;
-  width: 50px;
-  margin-top: -100px;
-}
-
-.cloud.small {
-  margin-right: 200px;
-  width: 100px;
-  margin-top: -30px;
-}
-
-.cloud.big {
-  width: 300px;
-  margin-top: 150px;
-  margin-right: 150px;
-}
-
-.cloud.massive {
-  width: 500px;
-  margin-top: 150px;
-  margin-right: 0px;
-}
-
-/*Cloud: Animation*/
-.cloud {
   -webkit-animation-name: cloud-movement;
   -webkit-animation-timing-function: linear;
   -webkit-animation-direction: forwards;
@@ -87,7 +49,46 @@
   animation-direction: forwards;
   animation-iteration-count: infinite;
   animation-duration: 8s;
+
+  &.front {
+    z-index: 9;
+  }
+
+  &.distant {
+    z-index: 1;
+  }
+
+  &.background {
+    z-index: 1;
+  }
+
+  /*Cloud Sizing*/
+  &.smaller {
+    margin-right: 400px;
+    width: 50px;
+    margin-top: -100px;
+  }
+
+  &.small {
+    margin-right: 200px;
+    width: 100px;
+    margin-top: -30px;
+  }
+
+  &.big {
+    width: 300px;
+    margin-top: 150px;
+    margin-right: 150px;
+  }
+
+  &.massive {
+    width: 500px;
+    margin-top: 150px;
+    margin-right: 0px;
+  }
 }
+
+/*Cloud: Animation*/
 
 .slow {
   -webkit-animation-duration: 9.2s;
@@ -107,7 +108,7 @@
   animation-duration: 13.5s;
 }
 
-.super-slow {
+.superSlow {
   -webkit-animation-duration: 20.5s;
   -moz-animation-duration: 20.5s;
   animation-duration: 20.5s;
