--- a/styles/components/Container.module.scss
+++ b/styles/components/Container.module.scss
@@ -1,9 +1,8 @@
 @import '../index.scss';
 
 .container {
-  width: 100%;
   height: 100vh;
-  padding: 1rem 2rem;
+  padding: 2rem;
 
   .main {
     @include flexbox;
