💄 modifty Guide UI

--- a/styles/components/Guide.module.scss
+++ b/styles/components/Guide.module.scss
@@ -1,15 +1,17 @@
-.guide-wrapper {
+@import '../index.scss';
+
+.guideWrapper {
   position: fixed;
   top: 0;
   right: 0;
   z-index: 999;
-  display: none;
+  display: block;
   padding: 3rem 4rem 2rem;
   background-color: $color-white;
-  transform: translate3d(100%, 0, 0);
+  transform: translate3d(0, 0, 0);
   transition: transform 500ms ease-in-out;
 
-  &.is-active {
+  &.isActive {
     display: block;
     transform: translate3d(0, 0, 0);
   }
@@ -18,12 +20,12 @@
     &-header {
       @include flexbox(between, start);
 
-      .btn-close {
+      .btnClose {
         width: 32px;
         height: 32px;
         padding-bottom: 0.4rem;
 
-        .ic-close {
+        .icClose {
           font-size: 3rem;
           color: $color-gray-400;
         }
@@ -56,15 +58,10 @@
   top: 0;
   left: 0;
   z-index: 990;
-  display: none;
+  display: block;
   width: 100vw;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.6);
-  opacity: 0;
+  opacity: 1;
   transition: opacity 300ms ease-in-out;
-
-  &.is-active {
-    display: block;
-    opacity: 1;
-  }
 }
